Fix vercel.json: remove static file override, let public/ work

--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,6 @@
     {
       "src": "diet.py",
       "use": "@vercel/python"
-    },
-    {
-      "src": "static/**",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
@@ -16,12 +12,8 @@
       "dest": "/static/$1"
     },
     {
-      "src": "/googlef6415480ddc16fef.html",
-      "dest": "googlef6415480ddc16fef.html"
-    },
-    {
       "src": "/(.*)",
-      "dest": "diet.py"
+      "dest": "/diet.py"
     }
   ]
 }
