--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
     },
     {
       "src": "/googlef6415480ddc16fef.html",
-      "dest": "/public/googlef6415480ddc16fef.html",
+      "dest": "/googlef6415480ddc16fef.html",
       "continue": false
     },
     {
