--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     {
       "src": "diet.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
@@ -13,8 +17,7 @@
     },
     {
       "src": "/googlef6415480ddc16fef.html",
-      "dest": "/googlef6415480ddc16fef.html",
-      "continue": false
+      "dest": "/googlef6415480ddc16fef.html"
     },
     {
       "src": "/(.*)",
